--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -5,7 +5,7 @@
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, img, h1, h3, p
+body, header, nav, main, footer, img, h1, h2, h3, h4, section, article, p, figure, figcaption
 {
     margin: 0;
     padding: 0;
@@ -82,7 +82,7 @@ main p
     margin: 2em 0.5em;
 }
 
-main h2
+main h2, h3, h4
 {
     color: #52699b;
     font-family: Josefin Sans, Arial, sans-serif;
@@ -90,11 +90,9 @@ main h2
 
 .headshot
 {
-    max-width: 100%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 10px;
+    margin: 10px auto 10px auto;
+    box-shadow: 2px 2px 10px #575757;
     width: 400px;
     
 }
@@ -137,6 +135,50 @@ iframe
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+article img
+{
+    width: 350px;
+    height: 350px;
+
+}
+
+figure 
+{
+    padding: 4px;
+    margin: auto;
+}
+  
+figcaption 
+{
+    color: #575757;
+    font-family: Josefin Sans, Arial, sans-serif;
+    padding: 6px;
+    text-align: center;
+}
+
+/* Media Query for Tablet Viewport */
+@media screen and (min-width: 650px), print {
+	.abrams-grid {
+		display: grid;
+		grid-template-columns: auto auto auto auto;
+		grid-gap: 2px;
+        margin: 4em 15%;
+        justify-items: left;
+	}
+}
+
+/* Media Query for Desktop Viewport */
+@media screen and (min-width: 1024px), print {
+	.abrams-grid {
+        display: grid;
+		grid-template-columns: auto auto auto auto;
+        grid-gap: 2px;
+        margin: 4em 15%;
+        justify-items: left;
+
+	}
 }
 
 /* footer styles */
