--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -1,41 +1,58 @@
 /*
     Rachel Sabotta
     styles.css
-    02/16/2025
+    03/02/2025
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, img, h1, h2, h3, h4, section, article, p, figure, figcaption
-{
+body, header, nav, main, footer, img, h1, h2, h3, h4, section, p {
     margin: 0;
     padding: 0;
     border: 0;
 }
 
-/* Navigation */
-nav
-{
+/* TOP OF PAGE */
+#green-stripe {
+    height: 100%;
+    width: 100%;
+    background-color: #adc2af;
+}
+
+#green-stripe img {
+    width: 50px;
+    height: auto;
+    padding: 10px;
+    display: flex;
+
+}
+
+/* #green-stripe p {
+    text-align: center;
+    display: flex;
+    color: white;
+    font-size: 1.2em;
+    font-family: Josefin Sans, Arial, sans-serif;
+} */
+
+/* NAVIGATION */
+nav {
     background-color: white;
 }
 
-nav ul
-{
+nav ul {
     list-style-type: none;
     margin: 0;
     text-align: center;
 }
 
-nav li
-{
+nav li {
     display: inline-block;
-    font-size: 1em;
+    font-size: 1.2em;
     font-family: Josefin Sans, Arial, sans-serif;
     font-weight: 400;
 }
 
-
-nav li a
-{
+nav li a {
     text-decoration: none;
     display: block;
     padding: 1em 2em;
@@ -43,74 +60,249 @@ nav li a
     color: #db7f8e;
 }
 
-/* header */
-header
-{
-    background-color: #52699b;
+/* HEADER */
+header {
+    height: 640px;
+    background-image: url(../images/background.png);
+    background-size: cover;  
+    background-repeat: no-repeat;
+    display: flex;                /* Enable Flexbox */
+    flex-direction: column;       /* Stack items vertically */
+    justify-content: center;      /* Center content vertically */
+    align-items: center;    
 }
-h1
-{
+
+.rs-designs {
     font-family: Impact, Arial, sans-serif;
     font-weight: 100;
-    font-size: 3em;
+    font-size: 4em;
     color: white;
-    text-align: center;
-    padding-top: 2em;
 }
 
-h3
-{
+.ccc {
     font-family: Josefin Sans, Arial, sans-serif;
     font-weight: 600;
-    font-size: 1em;
+    font-size: 2em;
     color: white;
     text-align: center; 
-    padding-bottom: 6em;
 }
 
-/*main styles*/
-main
-{
+/* MAIN STYLES */
+main {
     background-color: #eff6e1;
 }
 
-main p
-{
-    font-family: Josefin Sans, Arial, sans-serif;
+p {
     font-weight: 400;
     color: #575757;
-    margin: 2em 0.5em;
-}
-
-main h2, h3, h4
-{
-    color: #52699b;
+    padding: 1em 0em 0em 0.5em;
     font-family: Josefin Sans, Arial, sans-serif;
+    font-size: 20px;
+    line-height: 1.5;
 }
 
-.headshot
+h2 {
+    color: #52699b;
+    padding: 1em 0em 0em 0.5em;
+    font-family: Impact, Arial, sans-serif;
+    font-weight: 100;
+    font-size: 60px;
+    line-height: 1.5
+}
+
+h4 {
+    color: #52699b;
+    padding: 1em 0em 0em 0.5em;
+    font-family: Josefin Sans, Arial, sans-serif;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 1.5
+}
+
+#creative-experience {
+    color: white;
+    font-size: 45px;
+    text-align: center;
+}
+
+/* PORTFOLIO BUTTON */
+
+#portfolio
 {
+    color: white;
+    padding: 1em 0em;
+    font-family: Josefin Sans, Arial, sans-serif;
+    font-size: 20px;
+    text-align: center;
+    display: block;
+}
+
+/* MY WORK STYLES */
+
+#abrams-button {
+    font-family: Josefin Sans, Arial, sans-serif;
+    padding: 10px 20px;
+    background-color: white;
+    color: #db7f8e;
+    border: none;
+    border-radius: 16px;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+#abrams-button:hover  {
+    background-color: #db7f8e; /* Darker green when hovered */
+    color: white;
+}
+
+
+/* container/grid styles */
+
+.container {
+    display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.img-column {
+    flex: 1;
+    margin-right: 20px;
+}
+
+.img-column img {
+    width: 100%;
+    height: auto;
+    margin-top: 5px;
+}
+
+.text-column {
+    flex: 1;
+    margin-left: 80px;
+    margin-right: 100px;
+}
+
+.container-work {
+    display: flex;
+	justify-content: space-between;
+	width: 80%;
+    margin: 0 auto;
+
+}
+
+.img-column-work {
+    flex: 1;
+    margin: 0 10px;
+}
+
+.img-column-work img {
+    width: 100%;
+    height: auto;
+}
+
+.button-container-work {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    justify-content: center;
+    padding: 20px;
+}
+
+.button-column-work a {
+    display: inline-block;
+    font-family: Josefin Sans, Arial, sans-serif;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 16px;
+    background-color: white;
+    color: #db7f8e;
+}
+
+.button-column-work a:hover {
+    text-decoration: none;
+    color: white;
+    background-color: #db7f8e;
+}
+
+.edu-container {
+    display: flex;
+	justify-content: space-between;
+	width: 100%;
+    align-items: center;
+}
+
+.edu-img-column {
+    flex: 1;
+    margin-left: 20px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.edu-img-column img {
     display: block;
     margin: 10px auto 10px auto;
     box-shadow: 2px 2px 10px #575757;
     width: 400px;
-    
 }
 
-dt
-{
-    font-family: Josefin Sans, Arial, sans-serif;
+.edu-text-column {
+    flex: 1;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+dt {
     font-weight: 600;
     color: #575757;
     margin: 0.5em;
+    font-family: Josefin Sans, Arial, sans-serif;
 }
 
-dd
-{
-    font-family: Josefin Sans, Arial, sans-serif;
+dd {
     font-weight: 400;
     color: #575757;
+    font-family: Josefin Sans, Arial, sans-serif;
 }
+
+main .bluesection {
+    background-color: #52699b;
+}
+
+#magazine-spread-img {
+    width: 70%;
+    height: auto;
+    object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* TABLE STYLES */
+#work-section {
+    background-color: #52699b;
+}
+
+#work-section h2 {
+    color: white;
+}
+
+table {
+	width: 100%;
+	margin: 0 auto;
+    padding: 2%;
+}
+
+th, td {
+	padding: 1.5%;
+    text-align: left;
+    border: 1px solid #eff5e0;
+    font-family: Josefin Sans, Arial, sans-serif;
+    color: white;
+    line-height: 1.5
+} 
+
+/* CONTACT PAGE STYLES */
 
 #contact p
 {
@@ -124,10 +316,21 @@ dd
     color: #db7f8e;
 }
 
-#contact h2
-{
-    text-align: center;
-    padding: 1em 0em;
+#contact-container {
+    display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+#form-contact-column {
+    flex: 1;
+    margin-right: 20px;
+}
+
+#text-contact-column {
+    flex: 1;
+    margin-left: 80px;
+    margin-right: 100px;
 }
 
 iframe
@@ -135,29 +338,86 @@ iframe
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 80%;
+    height: 50%;
 }
 
-article img
-{
-    width: 350px;
-    height: 350px;
+/* CONTACT FORM STYLES */
 
-}
-
-figure 
-{
-    padding: 4px;
-    margin: auto;
-}
-  
-figcaption 
-{
-    color: #575757;
+form {
+    margin-top: 2%;
+    padding: 2%;
     font-family: Josefin Sans, Arial, sans-serif;
-    padding: 6px;
-    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    border: none;
 }
 
+fieldset {
+    margin-bottom: 2%;
+}
+
+label {
+    display: block;
+    padding: 2%;
+}
+
+legend {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+input[type=submit] {
+    background-color: white;
+    color: #db7f8e;
+    font-family: 'Josefin Sans', Arial, sans-serif;
+    font-size: 1em;
+    text-align: center;
+    border-radius: 8px;
+    border: 1px solid #db7f8e;
+    width: 25%;
+    height: 50px;
+    text-decoration: none;
+    margin: 8px 2px 0px 2px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #db7f8e;
+    color: white;
+}
+
+input {
+    width: 100%;
+    height: 25px;
+    font-family: Josefin Sans, Arial, sans-serif;
+    font-size: 1em;
+    color: #db7f8e;
+    box-sizing: border-box;
+    border: 2px solid #52699b;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+/* MEDIA QUERY */
+
+@media screen and (max-width: 320px), print {
+    .abrams-grid {
+		display: grid;
+		grid-template-columns: auto auto;
+		grid-gap: 2px;
+        margin: 4em 15%;
+        justify-items: center;
+	}
+
+    form {
+        margin-top: 2%;
+        padding: 2%;
+    }
+
+
+}
 /* Media Query for Tablet Viewport */
 @media screen and (min-width: 650px), print {
 	.abrams-grid {
@@ -167,6 +427,11 @@ figcaption
         margin: 4em 15%;
         justify-items: left;
 	}
+
+    form {
+        width: 70%;
+        margin: 0 auto;
+    }
 }
 
 /* Media Query for Desktop Viewport */
@@ -179,28 +444,42 @@ figcaption
         justify-items: left;
 
 	}
+
+    form {
+        width: 100%
+    }
 }
 
-/* footer styles */
-footer
-{
+/* FOOTER STYLES */
+footer {
     background-color: white;
     text-align: center;
     padding: 1em 0em;
 }
 
-footer p
-{
+footer p {
     font-family: Josefin Sans, Arial, sans-serif;
     font-weight: 400;
     color: #575757;
     padding: 0.5em 0em;
 }
 
-footer a
-{
+#collab {
+    color: #52699b;
+    padding: 0.5em 0em 0.5em 0em;
+    font-family: Impact, Arial, sans-serif;
+    font-weight: 100;
+    font-size: 40px;
+}
+
+footer a {
     font-family: Josefin Sans, Arial, sans-serif;
     font-weight: 400;
     color:#db7f8e;
     text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: #52699b;
 }
