--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,8 @@ nav a:hover {
 
 /* HEADER */
 header {
-    height: 640px;
-    background-image: url(../images/background.png);
+    height: 350px;
+    background-image: url(../images/header-bg-01.png);
     background-size: cover;  
     background-repeat: no-repeat;
     display: flex;
@@ -92,9 +92,9 @@ main {
 p {
     font-weight: 400;
     color: #575757;
-    padding: 1em 0em 0em 0.5em;
+    padding: 0.5em 0em 0em 1em;
     font-family: Josefin Sans, Arial, sans-serif;
-    font-size: 20px;
+    font-size: 23px;
     line-height: 1.5;
 }
 
@@ -118,7 +118,7 @@ h4 {
 
 #creative-experience {
     color: white;
-    font-size: 45px;
+    font-size: 43px;
     text-align: center;
 }
 
@@ -128,7 +128,7 @@ h4 {
     color: white;
     padding: 1em 0em;
     font-family: Josefin Sans, Arial, sans-serif;
-    font-size: 20px;
+    font-size: 23px;
     text-align: center;
     display: block;
 }
@@ -160,26 +160,26 @@ h4 {
 }
 
 /* ABRAMS CONTAINER */
-.button-container-abrams {
+.button-container-abrams, #button-container-greenwood, #button-container-magic {
     text-align: center;
     justify-content: center;
     align-items: center;
 }
 
-#abrams-button {
+#mywork-button {
     font-family: Josefin Sans, Arial, sans-serif;
-    padding: 10px;
+    padding: 10px 20px;
     background-color: white;
     color: #db7f8e;
     border-radius: 16px;
-    font-size: 16px;
+    font-size: 18px;
     text-decoration: none;
     display: inline-block;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
-#abrams-button:hover {
+#mywork-button:hover {
     background-color: #db7f8e;
     color: white;
 }
@@ -203,9 +203,30 @@ h4 {
     height: auto;
 }
 
+/* GREENWOOD PRIDE CONTAINER */
+.container-greenwood {
+    display: flex;
+	justify-content: space-between;
+	width: 60%;
+    margin: 20px auto;
+    flex-wrap: wrap;
+    padding: 0 10px;
+}
+
+.img-column-greenwood {
+    width: 46%;
+    margin: 0 1% 10px 1%;
+    box-sizing: border-box;
+}
+
+.img-column-greenwood img {
+    width: 100%;
+    height: auto;
+}
+
 /* MAGAZINE SPREAD */
-#magazine-spread-img {
-    width: 80%;
+#magazine-spread-img, #magazine-advertisment-img {
+    width: 60%;
     height: auto;
     object-fit: cover;
     display: block;
@@ -219,24 +240,6 @@ h4 {
     gap: 50px;
     justify-content: center;
     padding: 20px;
-}
-
-.button-column-work a {
-    display: inline-block;
-    font-family: Josefin Sans, Arial, sans-serif;
-    padding: 10px 20px;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 16px;
-    background-color: white;
-    color: #db7f8e;
-}
-
-.button-column-work a:hover {
-    text-decoration: none;
-    color: white;
-    background-color: #db7f8e;
 }
 
 .edu-container {
@@ -271,12 +274,14 @@ dt {
     color: #575757;
     margin: 0.5em;
     font-family: Josefin Sans, Arial, sans-serif;
+    font-size: 1.5em;
 }
 
 dd {
     font-weight: 400;
     color: #575757;
     font-family: Josefin Sans, Arial, sans-serif;
+    font-size: 1.2em;
 }
 
 main .bluesection {
@@ -293,7 +298,7 @@ main .bluesection {
     color: #575757;
     margin: 0.5em;
     font-family: Josefin Sans, Arial, sans-serif;
-    font-size: 1.5em;
+    font-size: 1.8em;
     line-height: 1.5;
 }
 
@@ -301,7 +306,7 @@ main .bluesection {
     font-weight: 400;
     color: #575757;
     font-family: Josefin Sans, Arial, sans-serif;
-    font-size: 1.2em;
+    font-size: 1.5em;
     line-height: 1.5;
 }
 
@@ -612,8 +617,8 @@ footer a:hover {
 
     /* ABRAMS MY WORK CONTAINER */
     .img-column-abrams {
-        width: 48%;
-        margin: 10px 0;
+        width: 48%; /* Two images per row on smaller screens */
+        margin: 10px 0; /* Adds vertical margin between images */
     }
 
     #contact h2 {
