--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,7 @@ main .bluesection {
     background-color: #52699b;
 }
 
-/* FAQ STYLES */
+/* FAQ STYLES 
 #faq-section {
     padding-bottom: 25px;
 }
@@ -309,6 +309,7 @@ main .bluesection {
     font-size: 1.5em;
     line-height: 1.5;
 }
+*/
 
 /* TABLE STYLES */
 #work-section {
