--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,7 @@ iframe
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 15px;
     width: 40%;
     height: auto;
 }
