--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body, header, nav, main, footer, img, h1, h2, h3, h4, section, p {
     border: 0;
 }
 
+* {
+    outline: 1px solid red; /* This will help you to see your element boundaries */
+}
+
 body {
     overflow-x: hidden;
 }
