--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,7 @@ footer {
     flex-direction: row;
     align-items: center;
     gap: 20px;
+    width: auto;
 }
 
 .social-column h4 {
@@ -738,7 +739,7 @@ footer a:hover {
 
     .social-column {
         margin-bottom: 1em;
-        width: 100%; /* Ensure social column takes full width in mobile view */
+        width: auto;
     }
 
     .image-hover-link {
