--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;    
+    max-width: 100%;
 }
 
 .rs-designs {
@@ -91,6 +92,7 @@ header {
 /* MAIN STYLES */
 main {
     background-color: #eff6e1;
+    max-width: 100%;
 }
 
 p {
@@ -330,6 +332,7 @@ dd {
 #work-section {
     background-color: #52699b;
     padding-bottom: 25px;
+    max-width: 100%;
 }
 
 #work-section h2 {
@@ -680,6 +683,7 @@ footer a:hover {
         flex-direction: column;
         align-items: center;
         padding: 10px;
+        max-width: 100%;
     }
     
     .edu-img-column {
